# Perigee

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  check.ps1  package-lock.json
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-testnet.yml  migration-check.yml
Perigee/: CONTRIBUTING.md  CROSS_CHAIN_PAYLOAD_IMPLEMENTATION.md  Cargo.toml  README.md  RELEASE_NOTES_TESTNET.md
Perigee/core/: Cargo.toml  FEE_MARKET_README.md  MERKLE_TREE_README.md
Perigee/docs/: CROSS_CHAIN_VERIFIER_PR.md  CROSS_CHAIN_VERIFIER_STANDARD.md  DOCUMENTATION_INDEX.md  FEE_MARKET_IMPLEMENTATION_SUMMARY.md  FEE_MARKET_QUICKSTART.md  FRONTEND_PERSISTENCE.md  MAINNET_DEPLOYMENT.md  README_EMERGENCY_GUARD.md  SECURITY_AUDIT_CHECKLIST.md  WASM_ERROR_HANDLING.md  WASM_ERROR_HANDLING_COMPLETE.md  WASM_ERROR_HANDLING_TEST_GUIDE.md  development.md  good-first-issues.md  pull-requests.md  token_guard_storage_analysis.md
Perigee/web/: .env.example  package-lock.json  package.json
contracts/auction_factory/: Cargo.toml
contracts/auction_factory/src/: lib.rs  test.rs
contracts/cpu_heavy/: Cargo.toml
contracts/cross_chain_payload/: Cargo.toml
contracts/crucible-example-gasless/: Cargo.toml
contracts/emergency_guard/: Cargo.toml
contracts/factory/: Cargo.toml  README.md
contracts/flash_loan_vault/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/liquidity_pool/: Cargo.toml  README.md
contracts/math/: Cargo.toml
contracts/staking_rewards/: Cargo.toml
contracts/token/: Cargo.toml  README.md
core/: Cargo.toml
core/benches/: merkle_bench.rs
core/migrations/: 003_create_reconciliation_tables.sql
core/src/: auth.rs  billing_service.rs  comparison.rs  fee_analytics.rs  fee_collector.rs  fuzz_tests.rs  gas_golfing.rs  insights.rs  jobs.rs  lib.rs  main.rs  merkle_tree.rs  middleware.rs  parser.rs  parser_fuzz_tests.rs  reconciliation.rs  simulation.rs  stellar_service.rs
docs/: ISSUE_218_PROFILING_REPORT.md  ISSUE_230_PROFILING_REPORT.md  LIQUIDITY_GUARD_STORAGE_ANALYSIS.md  TOKEN_GUARD_INTEGRATION_GUIDE.md  TOKEN_GUARD_STORAGE_ANALYSIS.md
scripts/: deploy_testnet.sh
soroscope/: CONTRIBUTING.md  CROSS_CHAIN_PAYLOAD_IMPLEMENTATION.md
soroscope/docs/: FRONTEND_PERSISTENCE.md  development.md  issues.md  pull-requests.md
soroscope/web/: .env.example
tests/: engine_di_test.rs
web/: MIGRATION.md  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/lib/: api.ts  (+4 more)
(+383 files in other folders)
