[workspace]
resolver = "2"
members = [
    "core",
    "contracts/token",
    "contracts/hello_soroban",
    "contracts/storage_heavy",
    "contracts/liquidity_pool",
    "contracts/cpu_heavy",
    "contracts/cross_call",
    "contracts/factory",
    "contracts/emergency_guard",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
